--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="#">
-  <link rel="stylesheet" href="./style.css">
   <title>DevOps CI/CD</title>
 </head>
 <body style="background-color: azure;">
   <h1>Example 1</h1>
-  <button id="my-btn">Click Me</button>
+  <button id="my-btn" onclick="updateBackgroundColour()">Click Me</button>
   <script src="./app.js"></script>
 </body>
 </html>
